major progress made in the script.js. question and answers now populate along with a start timer. scores and initials are saved to local.storage. need to finish decrement timer on wrong answser and populating results to user. git push

--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
     <title>Coding Pop Quiz</title>
 </head>
 <body>
-    <h3 class="time" style="text-align: end;">test</h3>
+    <h3 class="time" style="text-align: end;">Timer</h3>
     <main class="container">
-        
+        <h1>Pop Quiz</h1>
         <div class="card">
-            <h2 class="question-title">test</h2>
-            <ul class="questions">
-                <li class="question-a">test</li>
-                <li class="question-b">test</li>
-                <li class="question-c">test</li>
-                <li class="question-d">test</li>
-            </ul>
+            <div class="form-group">
+                <label for="exampleFormControlSelect2" class="question-title">Literary Pop Quiz</label>
+                <select multiple class="form-control" id="FormControlSelect">
+                </select>
+            </div>
+            <button class="startBtn">Start!</button>
         </div>
+        <div class="scores"></div>
     </main>
-<link rel="stylesheet" href="./script.js">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="./script.js"></script>
 </body>
-</html>
+</html
