continued working on script.js

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
                 </select>
             </div>
             <button class="startBtn">Start!</button>
+            <button class="resetBtn" style="display: none;">Reset!</button>
         </div>
         <div class="scores"></div>
+
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="./script.js"></script>
