Updated README.md and continuted progress on script.js

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <h3 class="time" style="text-align: end;">Timer</h3>
+    <h1 style="text-align: center;">Pop Quiz</h1>
     <main class="container">
-        <h1>Pop Quiz</h1>
+        
         <div class="card">
             <div class="form-group">
                 <label for="exampleFormControlSelect2" class="question-title">Literary Pop Quiz</label>
@@ -20,7 +21,9 @@
             <button class="startBtn">Start!</button>
             <button class="resetBtn" style="display: none;">Reset!</button>
         </div>
-        <div class="scores"></div>
+        <div class="scores">
+            <input class="user-input" style="display: none;" type="text">
+        </div>
 
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
