fixed a bug in the html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         
         <div class="card">
             <div class="form-group">
-                <label for="exampleFormControlSelect2" class="question-title">Literary Pop Quiz</label>
+                <label for="FormControlSelect2" class="question-title">Literary Pop Quiz</label>
                 <select multiple class="form-control" id="FormControlSelect">
                 </select>
             </div>
